force-app/main/default/objects/ilms__User_Question__c/ilms__User_Question__c.object-meta.xml
<CustomObject>
    <label>User Question</label>
    <nameField>
        <displayFormat>UQ{00000}</displayFormat>
        <label>User Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>