force-app/main/default/objects/ilms__User_Question__c/fields/ilms__Answer__c.field-meta.xml
<CustomField>
    <fullName>ilms__Answer__c</fullName>
    <label>Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>