force-app/main/default/objects/ilms__User_Question__c/fields/ilms__Matches__c.field-meta.xml
<CustomField>
    <fullName>ilms__Matches__c</fullName>
    <label>Matches</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>