force-app/main/default/objects/ilms__User_Question__c/fields/ilms__Option__c.field-meta.xml
<CustomField>
    <fullName>ilms__Option__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Option</label>
    <referenceTo>ilms__Option__c</referenceTo>
    <relationshipLabel>User Questions</relationshipLabel>
    <relationshipName>Option</relationshipName>
    <type>Lookup</type>
</CustomField>