force-app/main/default/objects/ilms__User_Question__c/fields/ilms__Options__c.field-meta.xml
<CustomField>
    <fullName>ilms__Options__c</fullName>
    <label>Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>