force-app/main/default/objects/ilms__User_Question__c/fields/ilms__Points__c.field-meta.xml
<CustomField>
    <fullName>ilms__Points__c</fullName>
    <label>Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>