force-app/main/default/objects/ilms__User_Question__c/fields/ilms__Question__c.field-meta.xml
<CustomField>
    <fullName>ilms__Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Question</label>
    <referenceTo>ilms__Question__c</referenceTo>
    <relationshipLabel>User Questions</relationshipLabel>
    <relationshipName>Question</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>