force-app/main/default/objects/ilms__User_Question__c/fields/ilms__Quiz_NTimes__c.field-meta.xml
<CustomField>
    <fullName>ilms__Quiz_NTimes__c</fullName>
    <label>Quiz NTimes</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>