force-app/main/default/objects/ilms__User_Question__c/fields/ilms__Review__c.field-meta.xml
<CustomField>
    <fullName>ilms__Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review</label>
    <type>Checkbox</type>
</CustomField>