force-app/main/default/objects/ilms__User_Question__c/fields/ilms__Right__c.field-meta.xml
<CustomField>
    <fullName>ilms__Right__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Right</label>
    <type>Checkbox</type>
</CustomField>