force-app/main/default/objects/ilms__User_Question__c/fields/ilms__Score__c.field-meta.xml
<CustomField>
    <fullName>ilms__Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>