force-app/main/default/objects/ilms__User_Question__c/fields/ilms__Time__c.field-meta.xml
<CustomField>
    <fullName>ilms__Time__c</fullName>
    <description>Time in seconds</description>
    <label>Time</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>