force-app/main/default/objects/ilms__User_Question__c/fields/ilms__Used_Hint__c.field-meta.xml
<CustomField>
    <fullName>ilms__Used_Hint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used Hint</label>
    <type>Checkbox</type>
</CustomField>