force-app/main/default/objects/ilms__User_Question__c/fields/ilms__User_Page__c.field-meta.xml
<CustomField>
    <fullName>ilms__User_Page__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>User Page</label>
    <referenceTo>ilms__User_Page__c</referenceTo>
    <relationshipLabel>User Questions</relationshipLabel>
    <relationshipName>Question_Page</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>